# Balatro-Seed-Searcher

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md
.github/workflows/: pages.yml
docs/: V3_DESIGN.md  architecture.md  comparison.md
engine/: Cargo.toml
engine/benches/: throughput.rs
engine/examples/: probe.rs
engine/shaders/: diagnostic.wgsl
engine/src/: derive.rs  filter.rs  instance.rs  items.rs  lib.rs  rng.rs  search.rs  seed.rs  state.rs  tables.rs  wasm_api.rs
engine/src/v3/: boss_probe.rs  df.rs  diagnostic.rs  lua_random.rs  mod.rs  pseudohash.rs
scripts/: PARITY.md  build-wasm.sh  parity_bitwise.js  parity_bitwise_results.json  parity_harness.js  parity_results.json
server/: Dockerfile  README.md  package-lock.json  package.json
server/src/: index.js  worker.js
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
web/public/engine/: balatro_seed_engine_bg.wasm
web/public/engine-simd/: balatro_seed_engine_bg.wasm
web/src/: App.js  App.tsx  presets.ts  styles.css  types.ts
web/src/components/: Combobox.tsx  FilterBuilder.tsx  ResultsPanel.tsx
web/src/engine/: assetPath.ts  loader.js  loader.ts  webgpu.ts
web/src/search/: orchestrator.ts
web/src/v3/: engineSelector.ts  webgpuEngine.ts
web/src/workers/: searchWorker.js  searchWorker.ts  searchWorkerThreaded.ts
