[package]
name = "balatro-seed-engine"
version = "0.1.0"
edition = "2021"
description = "Fastest possible Balatro seed searcher — Rust core, WASM + SIMD + WebGPU paths"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
simd = []
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

[[bench]]
name = "throughput"
path = "benches/throughput.rs"
harness = false
